example of youtube auth, loading env variables